działa przechodzenie do stanu gry i odsieżanie

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
     </div>
   </div>
 
+  <div id="error" style="display:none;">
+      <h2 style="color: red">Taki pokój nie istnieje, gra się rozpoczęła lub został usunięty</h1>
+  </div>   
+
   <!-- kontener z lobby - ukryty do momentu wejscia -->
   <div id="lobby" style="display:none;">
     <p>Pokój: <span id="lobbyCode"></span></p>
