--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     </div>
   </div>
 
+
   <div id="error" style="display:none;">
       <h2 style="color: red">Taki pokój nie istnieje, gra się rozpoczęła lub został usunięty</h1>
   </div>   
@@ -35,7 +36,14 @@
     <button id="startGame" disabled>Rozpocznij grę</button>
     <button id="cancel">Anuluj</button>
   </div>  
+
   <canvas id="gameCanvas" width="500" height="120" style="display:none;"></canvas>
+  <div id="gameInfo" style="display:none;">
+    <p>Gracz: <span id="playerNameDisplay"></span></p>
+    <p>Runda: <span id="roundDisplay"></span></p>
+    <p>Punkty: <span id="pointsDisplay"></span></p>
+    <button id="rollDice">Rzuć kostkami</button>
+    <button id="endTurn">Zakończ turę</button>
 
   <script src="main.js"></script>  
 
