dziala wybieranie kosci oraz losowanie do wykonania tabela punktow

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,9 @@
   <canvas id="gameCanvas" width="500" height="120" style="display:none;"></canvas>
   <div id="gameInfo" style="display:none;">
     <p>Gracz: <span id="playerNameDisplay"></span></p>
-    <p>Runda: <span id="roundDisplay"></span></p>
+    <p>Tura: <span id="roundDisplay"></span></p>
     <p>Punkty: <span id="pointsDisplay"></span></p>
+    <p>Rzuty: <span id="rollsLeft">3</span></p>
     <button id="rollDice">Rzuć kostkami</button>
     <button id="endTurn">Zakończ turę</button>
 
