po odswiezaniu rysuja sie kostki ale nie sa klikal

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,11 @@
     <button id="endTurn">Zakończ turę</button>
   </div>
 
+  <div id="loading" style="display:none">
+    Ładuję stan gry…
+  </div>
+  
+
   <div id="scoreTable" style="display:none;">
     <table>
       <thead>
