dziala preview punktów

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,11 @@
           <td id="bonus">(0)</td>
           <td><button class="acceptBtn" data-category="bonus" disabled>Akceptuj</button></td>
         </tr>
+        <tr data-category="pointsTo63">
+          <td>Brakuje do 63</td>
+          <td id="pointsTo63">(63)</td>
+          <td></td>
+        </tr>
         <tr data-category="total">
           <td>Łącznie</td>
           <td id="total">(0)</td>
