--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,7 @@
     </table>
   </div>
   
-
-
-  <script src="main.js"></script>  
+  <script type="module" src="./main.js"></script>
 
 </body>
 </html>
